log
Sat, May 17, 2025 12:56:36 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sat, May 17, 2025  1:13:13 PM: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:18: error: unused variable 'l' [-Werror=unused-variable]
     int i, j, k, l;
                  ^
cc1.exe: all warnings being treated as errors
2f5dd32
